<resources>
    <string name="app_name">Votaciones</string>

    <!-- login view -->
    <string name="username_loginactivity">Usuario</string>
    <string name="password_loginactivity">Contraseña</string>
    <string name="textButton_loginactivity">Entrar</string>
    <string name="invalidUsernameOrPassword">Usuario o Contraseña invalida</string>
    <string name="requiredFields">Los campos son obligatorios</string>
    <string name="authenticationError">Error de autenticacion por favor intente nuevamente</string>
    <string name="userLoggedIn">Usuario logueado satisfactoriamente</string>
    <string name="errorUserObjectIsNull">Error en el servidor</string>
    <string name="Authenticating">Autenticando</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="logout_confirm">Seguro desea salir?</string>
    <string name="tittle_login">Elecciones Escolares</string>

    <!-- activity_dashboard view -->
    <string name="voting_textview">Votaciones</string>
    <string name="voting_info">Verifique las actividades en las votaciones</string>
    <string name="campaign_textview">Campañas</string>
    <string name="campaign_info">Mira las propuestas de los candidatos</string>
    <string name="stadistics_textview">Estadisticas</string>
    <string name="stadistics_info">Examina como van las votaciones</string>
    <string name="others_textview">Otros</string>
    <string name="others_info">Seccion por definir</string>
    <string name="vote_textview">Votar</string>
    <string name="calendar_textview">Calendario</string>
    <string name="calendar_info">Vea las fechas de las siguientes elecciones</string>
    <string name="voteIsActive">Eleccion en curso: </string>
    <string name="voteIsNotActive">No hay elecciones en curso</string>

    <!-- Voting View -->
    <string name="action_search">Buscar</string>
    <string name="search_hint">Escriba el nombre..</string>
    <string name="candidate_toolbar_title">Candidatos</string>
    <string name="candidate_vote">Votar</string>
    <string name="questionVote">Quieres votar por este candidato?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="votoCast">Voto realizado</string>
    <string name="userHasAlreadyVoted">Ya usted ha votado</string>
    <string name="pleaseWhait">Por favor espere..</string>
    <string name="errorPlayingVideo">Error al reproducir el video</string>
    <string name="notElectionDay">No es fecha de elecciones</string>
    <string name="candidateTitle">Candidatos</string>

    <!-- campaign view -->
    <string name="search_voting">Seleccionar otra eleccion</string>
    <string name="noElectionDayShowLast">No es fecha de elecciones, se mostrara la ultima eleccion finalizada</string>
    <string name="selectAVote">Seleccione..</string>
    <string name="publicationTitle">Publicaciones</string>
    <string name="stadisticsTitle">Estadisticas</string>

    <!-- calendar view -->
    <string name="calendarTitle">Calendario</string>

    <!-- stadistic view -->
    <string name="totalVoters">Total de votantes</string>


</resources>
