<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="250dp"
    android:background="@drawable/border_dialog_alert"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:id="@+id/dialogImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"

            android:contentDescription="@string/app_name" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/questionVote"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_gravity="center|left"
            android:text="@string/yes"
            android:layout_margin="5dp"
            android:textStyle="bold"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/green"
            android:id="@+id/yesVote"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:layout_gravity="center|right"
            android:text="@string/no"
            android:layout_margin="5dp"
            android:textStyle="bold"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/noVote"
            android:background="@color/warning_info"
            android:layout_height="wrap_content" />
    </FrameLayout>
</LinearLayout>