<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginActivity"
    android:orientation="vertical">


    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="36dp"
        android:maxLines="1"
        android:textSize="13sp"
        android:hint="@string/username_loginactivity"
        />

    <EditText
        android:id="@+id/passwordEditText"
        android:textSize="13sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="36dp"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:hint="@string/password_loginactivity"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/enterLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="36dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:text="@string/textButton_loginactivity"/>



</LinearLayout>